index html updated

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
         <a href="https://time2hack.com">Time to Hack</a></i
       >
     </p>
+    <p>Checkout following endpoints</p>
+    <ul>
+      <li><a href="/api/">/api/</a></li>
+      <li><a href="/api/upload">/api/upload</a></li>
+    </ul>
   </body>
 </html>
