--- a/index.html
+++ b/index.html
@@ -1,23 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>API Example</title>
-  </head>
-  <body>
-    <h1>API on Vercel</h1>
-    <p>
-      <i
-        >This API is for an article on
-        <a href="https://time2hack.com">Time to Hack</a></i
-      >
-    </p>
-    <p>Checkout following endpoints</p>
-    <ul>
-      <li><a href="/api/">/api/</a></li>
-      <li><a href="/api/upload">/api/upload</a></li>
-    </ul>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Image Uploader with Abort Controller</title>
+  <style>
+    body {
+      text-align: center;
+    }
+
+    .container {
+      max-width: 960px;
+      margin: 0 auto;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h1>Upload new Image</h1>
+    <form id="imageUploadForm">
+      <div>
+        <label for="file">Image</label>
+        <div>
+          <input type="file" name="file" id="file" />
+        </div>
+      </div>
+      <div>
+        <button type="submit">Start Upload</button>
+        <button type="reset">Reset</button>
+        <button type="button" id="stop">Stop Upload</button>
+      </div>
+      <div id="status"></div>
+    </form>
+  </div>
+
+  <hr />
+
+  <h1>API on Vercel</h1>
+  <p>
+    <i>This API is for an article on
+      <a href="https://time2hack.com">Time to Hack</a></i>
+  </p>
+  <p>Checkout following endpoints</p>
+  <ul>
+    <li><a href="/api/">/api/</a></li>
+    <li><a href="/api/upload">/api/upload</a></li>
+  </ul>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const formEl = document.querySelector('#imageUploadForm')
+      attachFormEvents(formEl)
+      console.log(formEl)
+    })
+
+    const attachFormEvents = (formEl) => {
+      console.log(formEl)
+      if (!formEl) {
+        return
+      }
+
+      console.log('submit')
+      const stop = formEl.querySelector('#stop')
+      const status = formEl.querySelector('#status')
+      var controller = new AbortController();
+      var signal = controller.signal;
+
+      formEl.addEventListener('submit', (e) => {
+        console.log('submit')
+        e.preventDefault()
+        e.stopPropagation()
+        status.innerText = ''
+        const formData = new FormData(formEl);
+        console.log(formData)
+        const url = 'https://api-test-time2hack.vercel.app/api/upload'
+        fetch(url, { signal, method: 'POST' })
+          .then(r => r.json())
+          .catch(e => ({ status: e.message })
+            .finally(stat => (status.innerText = stat.status))
+        })
+
+      stop && stop.addEventListener('click', (e) => {
+        controller.abort()
+      })
+    }
+  </script>
+</body>
+
 </html>
